fixes left alignment issue

--- a/src/containers/Auth/Auth.module.scss
+++ b/src/containers/Auth/Auth.module.scss
@@ -25,6 +25,7 @@
     }
   }
   .recaptcha{
+    margin: 20px auto 0px;
     margin-top: 25px;
   }
   .Auth-submit-wrapper{
@@ -174,6 +175,7 @@
       line-height: 16px;
     }
     .Auth-terms-signup {
+      margin: 20px auto 0px;
       line-height: 19px;
       padding: 7px 0px;
       margin-bottom: 52px;
